// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Uniswap Gas Tests Mixing V2 and V3 with Narwhal Router. Interleaving routes gas: V2, then V3 1`] = `
Object {
  "calldataByteLength": 900,
  "gasUsed": 190043,
}
`;

exports[`Uniswap Gas Tests Mixing V2 and V3 with Narwhal Router. Interleaving routes gas: V3, then V2 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 180504,
}
`;

exports[`Uniswap Gas Tests Mixing V2 and V3 with Narwhal Router. Split routes gas: ERC20 --> ERC20 split V2 and V3, one hop 1`] = `
Object {
  "calldataByteLength": 1060,
  "gasUsed": 171673,
}
`;

exports[`Uniswap Gas Tests Mixing V2 and V3 with Narwhal Router. Split routes gas: ERC20 --> ETH split V2 and V3, one hop 1`] = `
Object {
  "calldataByteLength": 1028,
  "gasUsed": 179461,
}
`;

exports[`Uniswap Gas Tests Mixing V2 and V3 with Narwhal Router. Split routes gas: ETH --> ERC20 split V2 and V3, one hop 1`] = `
Object {
  "calldataByteLength": 1188,
  "gasUsed": 215599,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ERC20 --> ERC20 gas: completes a V2 exactIn swap 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 101420,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ERC20 --> ERC20 gas: completes a V2 exactIn swap with longer path 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 172476,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ERC20 --> ERC20 gas: completes a V2 exactOut swap 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 106753,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ERC20 --> ETH gas: completes a V2 exactIn swap 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 118323,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ERC20 --> ETH gas: completes a V2 exactOut swap 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 124026,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ETH --> ERC20 gas: completes a V2 exactIn swap 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 108187,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 With narwhal: ETH --> ERC20 gas: completes a V2 exactOut swap 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 139500,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 with Router02. gas: ERC20 --> ERC20 exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 452,
  "gasUsed": 193278,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 with Router02. gas: ERC20 --> ERC20 exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 122001,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 with Router02. gas: ERC20 --> ETH exactOut ETH, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 122933,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 with Router02. gas: ETH --> ERC20 exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 124889,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V2 with Router02. gas: exactIn, one trade, one hop ERC20 --> ERC20 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 121407,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ERC20 --> ERC20 gas: completes a V3 exactIn swap 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 107020,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ERC20 --> ERC20 gas: completes a V3 exactIn swap with longer path 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 182902,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ERC20 --> ERC20 gas: completes a V3 exactOut swap 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 108423,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ERC20 --> ERC20 gas: completes a V3 exactOut swap with longer path 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 305641,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ERC20 --> ETH gas: completes a V3 exactIn swap 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 123923,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ERC20 --> ETH gas: completes a V3 exactOut swap 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 125398,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ETH --> ERC20 gas: completes a V3 exactIn swap 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 245210,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Narwhal Router. ETH --> ERC20 gas: completes a V3 exactOut swap 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 140500,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Router02. gas: ERC20 --> ERC20 exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 284015,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Router02. gas: ERC20 --> ERC20 exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 196837,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Router02. gas: ERC20 --> ERC20 exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 114904,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Router02. gas: ERC20 --> ERC20 exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 423372,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Router02. gas: ERC20 --> ERC20 exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 313985,
}
`;

exports[`Uniswap Gas Tests Trade on Uniswap V3 with Router02. gas: exactIn, one trade, one hop ERC20 --> ERC20 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 104733,
}
`;
